# fty-core

./: .gitignore  .travis.yml  .valgrind.supp  AUTHORS  CONTRIBUTING  INSTALL  INSTALL-referenceOS-debian8  INSTALL-sources  Jenkinsfile  Makefile.am  README  README.md  TODO  autogen.sh  ci_build.sh  ci_deploy.sh  config.h.in  configure.ac  test-malamute-pool.sh
database/mysql/: 0001_device_type_extension.sql  0002_v_web_element_view.sql  0002_v_web_element_view_update.sql  0003_device_type_extension.sql  0004_ext_cascade.sql  0005_super_parent_names.sql  0006_super_parent_names.sql  0007_device_type_extension.sql  0008_ext_names.sql  0009_device_type_extension.sql  0010_super_parent_names.sql  0011_default_rc.sql  0012_device_type_extension.sql  0013_user_management.sql  0014_user_preferences.sql  0015_composite_power_system.sql  0015_ipm2.sql  0017_device_type_extension.sql  0019_device_type_extension.sql  0019_security_wallet.sql  0020_discovery_monitoring.sql  0021_device_type_extension.sql  0023_batt_maint_isodate.sql  0024_batt_warranty_date.sql  0025_device_type_extension.sql  0026_bios_measurement_value_int64.sql  0026_measurement_value_i64.sql  0026_rack_asset_order.sql  0027_rack_asset_order.sql  02_02_00_00_fty-update.sql  Makefile.am  cm_tests_khr.sql  crud_test.sql  current_data.sql  generate_averages.sh  initdb.sql  initdb_ci_patch_2.sql  load_ROZLAB.sql  load_data.csv  load_data.sql  (+8 more)
docker/: Makefile.am  README  docker_build_bios.sh  docker_remove.sh  docker_run_bios.sh  docker_stop.sh
docker/resources/: Dockerfile  ROZ.UPS1.dev  ROZ.ePDU04.dev  ROZ.ePDU05.dev  UPS1-LAB.dev  UPS2-LAB.dev  UPS3PH-LAB.dev  docker_patch.sql  ePDU1-LAB.dev  ePDU2-LAB.dev  interfaces  patch.sql  start_bios.sh  ups.conf  ups.dev  upsmon.conf
docker/ressources/: Dockerfile  patch.sql  start_bios.sh  ups.dev
docs/examples/: Makefile.am  bios_sudo_conf  bios_sudo_conf_01_citest
docs/examples/ftylog.d/: 10-ftylog.cfg  20-wwwlog.cfg
docs/examples/nut-server.service.d/: configure-nut-users.conf.in
docs/examples/pam.d/: bios  fty  fty-auth  fty-password
docs/examples/profile.d/: bash_history.sh  bash_syslog.sh  bios_path.sh  fty_aliases.sh  fty_path.sh  lang.sh
docs/examples/rsyslog.d/: .gitignore  05-bash.conf  05-bash.conf.in  08-ipc-remote.conf  10-ipc-remote.conf  10-ipc.conf  10-ipc.conf.in  20-auditlogs-remote.conf.in
docs/examples/rules.d/: 90-ipc-persistent-th.rules
docs/examples/security/: bios_groups.conf  fty_groups.conf
docs/examples/sudoers.d/: bios_00_base  bios_00_base.in  bios_01_citest  fty_00_base.in  fty_01_citest
docs/examples/sysctl.d/: 20-fty-icmp.conf
docs/examples/update-rc3.d/: .gitignore  02-http-proxy.conf  05-image-arch.conf  10-image-os-location.etn.conf  20-image-kernel.etn.conf  30-image-uboot.etn.conf  90-local-paths.rc3.conf  90-local-paths.rc3.conf.in
docs/man/: Makefile.am  cli.txt
images/: devel-pkg.list  runtime-pkg.list
include/: README-public-API-headers.txt  agents.h  app.h  bios_agent++.h  bios_agent.h  bios_export.h  ymsg.h
lenses/: ntp.aug
libbiosproto/: project.xml  this.rule  this2.rule
m4/: .gitignore  ac_prog_try_doxygen.m4  bs_check_saslauthd_mux.m4
obs/: .gitignore  0001-disable-admin-network.patch  Eaton-EULA  Makefile.am  _preinstallimage.deploy.spec  _preinstallimage.devel.spec  configure.ac  core.dsc  core.spec  debian.control  debian.copyright  debian.links  debian.rules  fty-core.dsc  preinstallimage-bios.sh  preinstallimage-bios.sh.in  sources
setup/: 01-bios-eula.sh  02-migrate-users.sh  09-install-swap-memory.sh  10-avahi-lxc.sh  10-bios-gpio.sh  11-forget-bios-devsvcs-1.sh  11-mount-boot-noauto.sh  15-dpkg-database.everytime.sh  16-machineid-dir.everytime.sh  17-proxy-file.everytime.sh  20-fty-compat.sh  (+16 more)
src/api/: Makefile.am  README-api-impl.txt  agents.c  app.c  bios_agent.c  build.sh  libbiosapi.pc.in  libbiosapi.sym  proto.c  proto.h  rfc-alerts-acknowledge.asciidoc  rfc-evaluator-rules.asciidoc  rfc-thresholds.asciidoc  rfc.asciidoc  selftest.c  ymsg.c
tools/: .gitignore  JSON.sh  Makefile.am  SqlLite.sql  _bios-script.sh  astyle-bios  astyle.conf  bam_import_16_comma_008.csv  bam_import_16_tab_008.csv  bam_import_16_vte_uptime_2_DC.csv  bam_import_16_wpos1.csv  bam_import_16_wpos2.csv  bam_import_16_wpos3.csv  bam_import_16_wpos4.csv  bam_vte_tab_import.csv  bios-agent-alert-smtp.service.in  bios-agent-alert.service.in  bios-agent-autoconfig.service.in  bios-agent-cm.service.in  bios-agent-dbstore.service.in  bios-agent-inventory.service.in  bios-agent-netmon.service.in  bios-agent-nut.service.in  bios-agent-th.service.in  bios-agent-tpower.service.in  bios-db-init.service.in  bios-db.service.in  bios-driver-netmon.service.in  bios-driver-nmap.service.in  bios-driver-nut.service.in  bios-fake-th.service.in  bios-networking  bios-networking.in  bios-networking.service.in  bios-nut-driver.service.in  bios-nutconfig.in  bios-passwd  bios-passwd.in  bios-reset-button.service.in  bios-server-agent.service.in  (+125 more)
tools/asset_import/: exp_uni_comma_8.csv  not_so_long_asset_tab_16LE.csv-070  universal_asset_comma_8.csv  universal_asset_comma_8_double_name_1.csv  universal_asset_comma_8_duplicate_ipx.csv  universal_asset_comma_8_duplicate_name_value.csv  universal_asset_comma_8_subtype_status_values.csv  universal_asset_comma_insensitive_8.csv  universal_asset_comma_no_utf.csv  universal_asset_mix_comma_semicolon__8.csv  universal_asset_semicolon_email_8.csv  universal_asset_semicolon_max_num_rack_wrong_8.csv  universal_asset_semicolon_not_consequently_8.csv  universal_asset_semicolon_u_size_wrong_8.csv  universal_asset_tab_16BE.csv  universal_asset_tab_16LE_DC001A.csv  universal_asset_tab_8.csv  universal_asset_tab_8_no_business_critical_header.csv  universal_asset_tab_8_no_location_header.csv  universal_asset_tab_8_no_name_header.csv  universal_asset_tab_8_no_name_value.csv  universal_asset_tab_8_no_sub_type_header.csv  universal_asset_tab_8_no_type_header.csv  very_long_asset_tab_16LE.csv
tools/tpower/: DC-ROZ_1.csv  DC-ROZ_2.csv  DC-ROZ_3.csv  DC-ROZ_4.csv  DC-ROZ_6.csv  DC-ROZ_8.csv
(+1079 files in other folders)
